--- a/docs/src/App.css
+++ b/docs/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
@@ -25,4 +21,27 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+header {
+  display: flex;
+  align-items: center;
+  height: 80px;
+  background-color: #CCC;
+  padding: 10px;
+}
+
+.sections-drawer {
+  position: fixed;
+  top: 80;
+  left: 0;
+  background: #AAA;
+  height: 100vh;
+  width: 15%;
+  min-width: 220px;
+  padding-left: 20px;
+}
+
+.section-link {
+  
 }
